tests/neg-deep-subtype/i3324.scala
//> using options -Xfatal-warnings

class Foo {
  def foo(x: Any): Boolean =
    x.isInstanceOf[List[String]]  // error
}
